[package]
name = "pitou"
version = "0.0.1"
edition = "2021"
description = "file system abstractions"
license = "MIT"
authors = ["nisaacdz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.2"

[features]
# drive = ["sysinfo"]
# full = ["drive"]

[dev-dependencies]
# pitou = { path = ".", features = ["full"] }
