[package]
name = "pitou-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
pitou-core = { git = "https://github.com/nisaacdz/pitou-core" }
web-sys = "0.3.69"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys" }

[workspace]
members = ["src-tauri"]
