[package]
name = "pitou"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "window-all", "shell-open"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
pitou-core = { git = "https://github.com/nisaacdz/pitou-core", features = ["backend"] }

#pitou-core = { path = "../../pitou-core", features = ["backend"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
